update - css 수정

--- a/static/css/search.css
+++ b/static/css/search.css
@@ -69,17 +69,18 @@
     justify-content: space-between;
     font-weight: bold;
     font-size: 14px;
+    padding: 2%;
 }
 
 .post_left {
     display: flex;
-    margin: 1.7% 1% 1% 1%;
     cursor: pointer;
+    align-items: center;
 }
 
 .post_left p {
     text-align: left;
-    margin-left: 3px;
+    margin-left: 10px;
     margin-top: 5%;
     margin-bottom: 0px;
 }
