--- a/static/css/sign_in.css
+++ b/static/css/sign_in.css
@@ -1,11 +1,11 @@
 .wrapper-signin {
     color: #555555;
-    margin-top: 100px;
-    padding-bottom: 30px;
+    margin-top: 5%;
+    padding-bottom: 1%;
     width: 500px;
-    height: 100%;
     border-radius: 20px;
-    border: 1px solid grey;
+    border: 0;
+    box-shadow: rgb(4 17 29 / 25%) 0px 0px 10px 0px;
 }
 
 .container-signin {
@@ -21,8 +21,7 @@
     font-size: 30px;
     font-weight: bolder;
     font-style: normal;
-    margin-top: 20px;
-    margin-bottom: 15px;
+    margin: 5% 0;
 }
 
 #error-msg{
@@ -42,26 +41,29 @@
 }
 
 #sign-up-btn{
-    color:blue;
     font-weight: bolder;
 }
-
-.input-box input {
+.input-box form{
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-
-    margin-top: 10px;
-    margin-bottom: 10px;
-
+}
+.input-box input {
     width: 300px;
     height: 30px;
-    border-radius: 13px;
-    border: 1px solid grey;
+    border-radius: 20px;
+    border: 1px solid rgb(202 206 211);
+    margin: 5%;
+    padding: 2%;
+    padding-left: 5%;
 }
 
 .input-box button {
     width: 100px;
     padding: 3%;
+    margin: 5%;
+}
+.label_wrapper{
+    display: flex;
+    width: 300px;
 }
