--- a/templates/market/seller.html
+++ b/templates/market/seller.html
@@ -118,7 +118,7 @@ seller
                                 </div>
                             </div>
                             <div id="info_right">
-                                <p>price: {{ drawing.buy_price }}</p>
+                                <p>{{ drawing.buy_price }} point</p>
                             </div>
                         </div>
 
@@ -149,12 +149,12 @@ seller
                             <div id="info_left">
                                 <img src="{{ owner.img }}" class='profile_aa'>
                                 <div class="info_left_text">
-                                    <p>{{ owner.nickname }}</p>
                                     <p>{{ drawing.title }}</p>
+                                    <p>{{ owner.nickname }}</p>
                                 </div>
                             </div>
                             <div id="info_right">
-                                <p>price: {{ drawing.buy_price }}</p>
+                                <p>{{ drawing.buy_price }} point</p>
                             </div>
                         </div>
 
