--- a/templates/user/sign_in.html
+++ b/templates/user/sign_in.html
@@ -26,12 +26,18 @@
         <div class="input-box">
             <form method="POST" action="/sign_in/">
                 {% csrf_token %}
+                <div class="label_wrapper">
+                    <label for="username">Email</label>
+                </div>
 
-                <input name="username" placeholder="Email">
-                <input type="password" name="password" placeholder="Password">
+                <input id="username" name="username">
+                <div class="label_wrapper">
+                    <label for="password">Password</label>
+                </div>
+
+                <input id="password" type="password" name="password">
 
                 <button type="submit">Sign In</button>
-                <p></p>
                 <div>
                     Not a member?
                     <a id="sign-up-btn" href="/sign_up/">Sign Up</a>
